18 March 2009: Wouter
	- Added tests, unknown algorithms become insecure. fallback works.

17 March 2009: Wouter
	- unit test for unsupported algorithm in anchor warning.
	- fixed so queries do not fail on opportunistic target queries.

16 March 2009: Wouter
	- fixup diff error printout in contrib/update-itar.sh.
	- added contrib/unbound_cacti for statistics support in cacti,
	  contributed by Dmitriy Demidov.

13 March 2009: Wouter
	- doxygen and lex/yacc on linux.
	- strip update-anchor on makedist -w.
	- fix testbound on windows.
	- default log to syslog for windows.
	- uninstaller can stop unbound - changed text on it to reflect that.
	- remove debugging from windows 'cron' actions.

12 March 2009: Wouter
	- log to App.logs on windows prints executable identity.
	- fixup tests.
	- munin plugin fix benign locking error printout.
	- anchor-update for windows, called every 24 hours; unbound reloads.

11 March 2009: Wouter
	- winsock event handler resets WSAevents after signalled.
	- winsock event handler tests if signals are really signalled.
	- install and service with log to file works on XP and Vista on 
	  default install location.
	- on windows logging to the Application logbook works (as a service).
	- fix RUN_DIR on windows compile setting in makedist.
	- windows registry has Software\Unbound\ConfigFile element.
	  If does not exist, the default is used. The -c switch overrides it.
	- fix makedist version cleanup function.

10 March 2009: Wouter
	- makedist -w strips out old rc.. and snapshot info from version.
	- setup.exe starts and stops unbound after install, before uninstall.
	- unbound-checkconf recognizes absolute pathnames on windows (C:...).

9 March 2009: Wouter
	- Nullsoft NSIS installer creation script.

5 March 2009: Wouter
	- fixup memory leak introduced on 18feb in mesh reentrant fix.

3 March 2009: Wouter
	- combined icon with 16x16(4) 32x32(4) 48x48(8) 64x64(8).
	- service works on xp/vista, no config necessary (using defaults).